turtleart.star.Star.scala.error
Compilation error:
Star:2: error: not enough arguments for method drawPart: (size: Double, angle: Double)Unit.
Unspecified value parameter angle.
  drawPart(50);
          ^